<resources>
    <string name="app_name">KhaThuen (ཁ་ཐུན)</string>
    <string name="title_prayer_detail">༄༅། །ཁ་ཐུན།</string>
    <string name="title_activity_help_info">HelpInfoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="info">
        <b>About</b>\n
        This app provides the daily buddhist prayers (ཁ་ཐུན) common in Bhutan.
    </string>
    <string name="help">
        <b>Problem viewing the content?</b>\n
        If you are not able to view the contents, most probably the dzongkha fonts are not installed on your phone. Please follow the instructions provided on the Dzongkha Development Commission <a href="http://www.dzongkha.gov.bt/IT/dzongkha_on_adroid_phones.en.php">website</a>
    </string>
    <string name="credit">
        <b>Content Credits</b>\n
        The prayers provided by this app are used directly from the following sites:\n\n

        1. <a href="http://www.lotsawahouse.org">Lotsawa House</a>\n
        2. <a href="http://itibetan.org">iTibet</a>
        \n\n
        The app icon is used from the clipartfest <a href="https://clipartfest.com/download/21648ea9b8ad58d13133ad7019c7ecaf94cee45b.html">site</a>
    </string>
    <string name="feedback">
        <b>Feedback</b>\n
        If you have any feedback or want to contribute, kindly let me know at kxt5258 [@] gmail [dot] com:\n
    </string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>
