<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/audio_menu_item">
    <item
        android:id="@+id/titleText"
        android:visible="true"
        app:showAsAction="always"
        android:title="Something" />

    <item
        android:id="@+id/play"
        android:orderInCategory="100"
        android:icon="@drawable/play"
        android:title="@string/play"
        app:showAsAction="always"/>
    <item
        android:id="@+id/pause"
        android:orderInCategory="100"
        android:icon="@drawable/pause"
        android:title="@string/pause"
        app:showAsAction="always"/>
    <item
        android:id="@+id/stop"
        android:orderInCategory="100"
        android:icon="@drawable/stop"
        android:title="@string/stop"
        app:showAsAction="always"/>
</menu>
